CHECKPOINT #6: добавлен RoleStorageProvider, права и роли не редактируются